Transaction filter (date, type) fixed